# TCC

./: .gitignore  README.md  champs_info.txt  champs_to_consider.txt  comando.txt  escopo.txt  items.py
tft_simulator/: CMakeLists.txt  main.py  test_combat.py  test_items.py  tft_engine.cp312-win_amd64.pyd  train_genetic.py  train_rl.py  watch_match.py
tft_simulator/agents/: heuristic_agent.py
tft_simulator/data/: best_genetic_agent.json  items.json  rl_metrics_20260610_003712.json  rl_metrics_20260610_061436.json  rl_metrics_20260610_164745.json  rl_metrics_20260610_173033.json  rl_metrics_20260610_223325.json  rl_metrics_20260610_230554.json  rl_metrics_20260611_055333.json  rl_metrics_20260615_234100.json  rl_metrics_20260616_165339.json  rl_metrics_20260617_000130.json  top_30_genetic_agents.json  top_6_genetic_agents.json  toy_set.json
tft_simulator/envs/: action_decoder.py  genetic_agent.py  population_manager.py  reward_calculator.py  state_encoder.py  tft_env.py  tft_gym_env.py
tft_simulator/include/: Board.hpp  Champion.hpp  CombatEngine.hpp  GlobalPool.hpp  Item.hpp  ItemEngine.hpp  Lobby.hpp  Match.hpp  Player.hpp  SetLoader.hpp  Shop.hpp  Spells.hpp  TraitEngine.hpp
tft_simulator/src/: Board.cpp  Champion.cpp  CombatEngine.cpp  GlobalPool.cpp  ItemEngine.cpp  ItemLoader.cpp  Lobby.cpp  Match.cpp  Player.cpp  SetLoader.cpp  Shop.cpp  Spells.cpp  TraitEngine.cpp  engine.cpp
tft_simulator/tft_tensorboard/PPO_1/: events.out.tfevents.1781061894.eki.18168.0
tft_simulator/tft_tensorboard/PPO_10/: events.out.tfevents.1781577608.eki.24680.0
(+19 files in other folders)
